--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,24 @@ body {
 
 h2 {
     text-align: center;
+    color: #0389f8;
 }
+
+#input-section button {
+    font-size: 2em;
+    text-transform: capitalize;
+    color: #FFF;
+    background-color: #0389f8;
+    border: 1px solid #0389f8;
+    padding: 15px;
+    margin: 10px 0px;
+}
+
+#input-section label,
+#input-section input {
+    margin-bottom: 10px;
+}
+
 
 .grid-container {
     display: grid;
@@ -13,6 +30,10 @@ h2 {
     justify-content: center;
     align-items: center;
     margin: 20px auto;
+    padding: 10px;
+    border: 2px solid #0389f8;
+    width: 360px;
+    height: 400px;
 }
 
 .grid-item {
@@ -21,7 +42,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #000;
+    border: 1px solid #fe9676;
     background-color: #f9f9f9;
     font-size: 24px;
 }
